syntax = "proto3";

option go_package = "github.com/channel-io/grpc-study/proto";

import "google/protobuf/wrappers.proto";

package ch_url_shortener;

service RegisterAPI {
  rpc ping(Empty) returns (google.protobuf.StringValue);
  rpc getRedirection(GetRequest) returns (RedirectionURL);
  rpc createRedirection(CreateRequest) returns (RedirectionURL);
}

message Empty {

}

message GetRequest {
  string token = 1;
}

message CreateRequest {
  string token = 1;
  string originalUrl = 2;
  string description = 3;
}

message RedirectionURL {
  string token = 1;
  string originalUrl = 2;
  string description = 3;
  string createdAt = 4;
  string expireAt = 5;
  string removeAt = 6;
  int32 version = 7;
}